@@ -1,4 +1,6 @@
 import re
+import os
+import getpass
 from topbeat import TestCase
 
 
@@ -30,6 +32,7 @@ class Test(TestCase):
         assert re.match("(?i).*topbeat.test(.exe)? -e -c", output["proc.cmdline"])
         assert isinstance(output["proc.state"], basestring)
         assert isinstance(output["proc.cpu.start_time"], basestring)
+        self.check_username(output["proc.username"])
 
         for key in [
             "proc.pid",
@@ -48,3 +51,14 @@ class Test(TestCase):
             "proc.mem.rss_p",
         ]:
             assert type(output[key]) in [int, float]
+
+    def check_username(self, observed, expected = None):
+        if expected == None:
+            expected = getpass.getuser()
+
+        if os.name == 'nt':
+            parts = observed.split("\\", 2)
+            assert len(parts) == 2, "Expected proc.username to be of form DOMAIN\username, but was %s" % observed
+            observed = parts[1]
+
+        assert expected == observed, "proc.username = %s, but expected %s" % (observed, expected)
